--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+:root {
+  --yellow: #2ce8f5de;
+  --orange: #008B8B;
+  --black: #242d49;
+  --gray: #788097;
+  --skyblue: #AFEEEE;
+  --blueCard: #ddf8fe;
+  --purple: rgb(238 210 255);
+  --boxShadow: 0px 19px 60px rgba(18, 65, 62, 0.39);
+  --orangeCard: rgba(31, 245, 252, 0.5);
+  --smboxShadow: -79px 51px 60px rgba(17, 63, 71, 0.247);
+}
+
 .App {
-  text-align: center;
+  padding: 0.5rem 3.5rem;
+  overflow: hidden;
+  color: var(--black);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+ .button {
+  border-radius: 35px;
+  border: none;
   color: white;
+  font-weight: bold;
+  font-size: 14px;
+  padding: 10px;
+  box-shadow: 0px 20px 24px 3px rgba(40, 244, 251, 0.42);
+
+  background: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
+} 
+.button:hover{
+  background: white;
+  cursor: pointer;
+  color: var(--orange);
+  border: 1px solid var(--orange);
+
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+
+@media screen and (max-width: 480px) {
+  .App{
+    padding: 0.5rem 1rem;
   }
 }
